syntax = "proto3";

package ecommerce;
option go_package="github.com/qu1queee/CodeEngine/grpc/ecommerce";

service grocery {
    rpc GetGrocery(Category) returns (Item) {};
    rpc ListGrocery(Category) returns (ItemList) {};
    rpc BuyGrocery(PaymentRequest) returns (PaymentResponse) {};
}

message Category{
    string category = 1;
    string itemname = 2;
}

message ItemList{
    repeated Item item =1;
}

message Item{
    string name = 1;
    string quantity = 2;
    double price = 3;
}

message PaymentRequest {
    double amount = 1;
    Item item = 2;
}

message PaymentResponse {
    bool success = 1;
    Item purchasedItem = 2;
    string details = 3;
    double change = 4;
}